--- a/injected.css
+++ b/injected.css
@@ -1,3 +1,16 @@
+/* Add material icons */
+@font-face {
+  font-family: "Material Icons";
+  font-style: normal;
+  font-weight: 400;
+  src: url(chrome-extension://__MSG_@@extension_id__/MaterialIcons-Regular.woff2) format('woff2')
+}
+
+.furball-mi {
+  font-family: "Material Icons";
+  font-weight: 400;
+}
+
 /* Standardizing the new navbar */
 
 #topnav > .innerwrap {
