--- a/extension/injected.css
+++ b/extension/injected.css
@@ -356,3 +356,46 @@ header + .main.container {
   border-radius: 100%;
   box-shadow: 1px 1px 1px rgb(153, 153, 153);
 }
+
+/* Night Mode */
+
+.night-mode #navigation {
+  background-color: #454545 !important;
+}
+
+.night-mode #view {
+  background-color: #2b2b2b !important;
+}
+
+.night-mode .box {
+  border: 1px solid #2b2b2b !important;
+  background: #2b2b2b !important;
+}
+
+.night-mode .box > .box-header {
+  background: #2b2b2b !important;
+  padding: 8px 7px !important;
+  border-top: 0px !important;
+  color: #fefefe !important;
+  border-bottom: 1px solid #d8d8d8 !important;
+}
+
+.night-mode .box > .box-content {
+  background: #777 !important;
+}
+
+.night-mode .news-description > p {
+  color: #fefefe !important;
+}
+
+.night-mode p, .night-mode h1, .night-mode h2, .night-mode h3, .night-mode h4, .night-mode h5, .night-mode h6 {
+  color: #fefefe !important;
+}
+
+.night-mode #footer {
+  background-color: #030303 !important;
+}
+
+.night-mode #footer select[name=language] {
+  background-color: #3e3e3e !important;
+}
